[metadata]
name = robotframework-interfacelibrary
author = Wu Qi, Wei Yating
author-email = seven_five57@sina.com
summary = An interface wrapper library for RobotFramework 
license = Apache 
description-file = 
	README.rst
home-page = https://github.com/Netease-AutoTest/robotframework-interfacelibrary
requires-python = >=2.7
classifier = 
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7

[files]
packages =
	src
